Clearance::SessionsController. This gives you access to usual hooks such as
url_after_create. (Dan Croak & Joe Ferris)
* Controllers, mailer, model, routes all unit tested inside engine. Use
script/generate clearance_features to test integration of Clearance with your
Rails app. No longer including modules in your app's test files. (Dan Croak & Joe Ferris)
* Moved views to engine.

h1. 0.5.5 (3/23/2009)

* Removing duplicate test to get rid of warning. (Nick Quaranto)

h1. 0.5.4 (3/21/2009)

* When users fail logging in, redirect them instead of rendering. (Matt
Jankowski)

h1. 0.5.3 (3/5/2009)

* Clearance now works with (and requires) Shoulda 2.10.0. (Mark Cornick, Joe
Ferris, Dan Croak)
* Prefer flat over nested contexts in sessions_controller_test. (Joe Ferris,
Dan Croak)

h1. 0.5.2 (3/2/2009)

* Fixed last remaining errors in Rails 2.3 tests. Now fully compatible. (Joe
Ferris, Dan Croak)

h1. 0.5.1 (2/27/2009)

* [#46] A user with unconfirmed email who resets password now confirms email.
(Marcel Görner)
* Refactored user_from_cookie, user_from_session, User#authenticate to use
more direct return code instead of ugly, harder to read ternary. (Dan Croak)
* Switch order of cookies and sessions to take advantage of Rails 2.3's "Rack-based lazy-loaded sessions":http://is.gd/i23E. (Dan Croak)
* Altered generator to interact with application_controller.rb instead of
application.rb in Rails 2.3 apps. (Dan Croak)
* [#42] Bug fix. Rack-based session change altered how to test remember me
cookie. (Mihai Anca)

h2. 0.5.0 (2/27/2009)

* Fixed problem with Cucumber features. (Dan Croak)
* Fixed mising HTTP fluency use case. (Dan Croak)
* Refactored User#update_password to take just parameters it needs. (Dan
Croak)
* Refactored User unit tests to be more readable. (Dan Croak)

h2. 0.4.9 (2/20/2009)

* Protect passwords & confirmations actions with forbidden filters. (Dan Croak)
* Return 403 Forbidden status code in those cases. (Tim Pope)