@@ -8,9 +8,6 @@ Factory.define :user do |user|
   user.password_confirmation { "password" }
 end
 
-Factory.define :email_confirmed_user, :class => 'user' do |user|
-  user.email                 { Factory.next :email }
-  user.password              { "password" }
-  user.password_confirmation { "password" }
-  user.email_confirmed       { true }
+Factory.define :email_confirmed_user, :parent => :user do |user|
+  user.email_confirmed { true }
 end
